macOs. nothing else is working

--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -63,6 +63,7 @@ jobs:
 
     pool:
       name: $(Pool)
+      image: $(OSVmImage)
       os: $(os)
 
     ${{ if eq(parameters.UsePlatformContainer, 'true') }}:
