back to vmimage instead of image

--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -63,7 +63,7 @@ jobs:
 
     pool:
       name: $(Pool)
-      image: $(OSVmImage)
+      vmImage: $(OSVmImage)
       os: $(os)
 
     ${{ if eq(parameters.UsePlatformContainer, 'true') }}:
