try swapping to something I saw in onees teams chat

--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -63,7 +63,7 @@ jobs:
 
     pool:
       name: $(Pool)
-      vmImage: $(OsVmImage)
+      image: $(OsVmImage)
       os: $(os)
 
     ${{ if eq(parameters.UsePlatformContainer, 'true') }}:
