remove ref to parameters.matrix

--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -62,8 +62,7 @@ jobs:
       condition: |
         and(
           succeededOrFailed(),
-          ne(variables['Skip.Test'], 'true'),
-          ne(${{ parameters.Matrix }}, '{}')
+          ne(variables['Skip.Test'], 'true')
         )
       timeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
 
