--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -69,7 +69,7 @@ jobs:
       pool:
         name: ${{ poolDefinition.Pool }} 
         os: ${{ poolDefinition.os}}
-        image: "${{ poolDefinition.OSVmImage }}"
+        vmImage: "${{ poolDefinition.OSVmImage }}"
 
       variables:
       - template: ../variables/globals.yml
