remove failing publish step, ensure python 3.10 actually runs instead of 3.1

--- a/eng/pipelines/templates/stages/archetype-sdk-client.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-client.yml
@@ -82,6 +82,7 @@ parameters:
   - name: AdvancedBuild
     type: boolean
     default: false
+  # demands currently not used, as I have been unable to get this to work. See https://dev.azure.com/azure-sdk/internal/_build/results?buildId=3496406&view=logs&j=913ce52b-8ad3-5a93-c0fe-123235d07c67
   - name: PoolStrategy
     type: object
     default: 
@@ -96,35 +97,35 @@ parameters:
         Pool: azsdk-pool-mms-ubuntu-2004-1es-pt
         os: linux
         demands: "ImageOverride -equals ubuntu-20.04"
-        PythonVersion: pypy3.9
+        PythonVersion: "pypy3.9"
         CoverageArg: --disablecov
         TestSamples: false
       - OSVmImage: macos-11
         Pool: Azure Pipelines
         os: macOS
         demands: "ImageOverride -equals macos-11"
-        PythonVersion: 3.11
+        PythonVersion: "3.11"
         CoverageArg: --disablecov
         TestSamples: false
       - OSVmImage: azsdk-pool-mms-win-2022-1espt
         Pool: azsdk-pool-mms-win-2022-1es-pt
         os: windows
         demands: "ImageOverride -equals windows-2022"
-        PythonVersion: 3.10
+        PythonVersion: "3.10"
         CoverageArg: --disablecov
         TestSamples: false
       - OSVmImage: azsdk-pool-mms-ubuntu-2004-1espt
         Pool: azsdk-pool-mms-ubuntu-2004-1es-pt
         os: linux
         demands: "ImageOverride -equals ubuntu-20.04"
-        PythonVersion: 3.9
+        PythonVersion: "3.9"
         CoverageArg: ""
         TestSamples: false
       - OSVmImage: azsdk-pool-mms-ubuntu-2004-1espt
         Pool: azsdk-pool-mms-ubuntu-2004-1es-pt
         os: linux
         demands: "ImageOverride -equals ubuntu-20.04"
-        PythonVersion: 3.12
+        PythonVersion: "3.12"
         CoverageArg: --disablecov
         TestSamples: false
 
