add credscan arguments to sdl definition

--- a/eng/pipelines/templates/stages/archetype-sdk-client.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-client.yml
@@ -142,6 +142,11 @@ extends:
           name: azsdk-pool-mms-win-2022-1es-pt
           image: azsdk-pool-mms-win-2022-1espt
           os: windows
+        credscan:
+          suppressionFile: '$(INETROOT)/eng/CredScanSuppression.json'
+          scanFolder: '$(INETROOT)/credscan.tsv'
+          toolVersion: '2.3.12.23'
+
     stages:
       - stage: Build
         jobs:
