--- a/eng/pipelines/templates/variables/globals.yml
+++ b/eng/pipelines/templates/variables/globals.yml
@@ -7,6 +7,9 @@ variables:
   DisableDockerDetector: true
   # Disable CodeQL injections except for where we specifically enable it
   Codeql.SkipTaskAutoInjection: true
+  Codeql.Language: python
+  Codeql.BuildIdentifier: "${{ parameters.ServiceDirectory }}"
+  Codeql.SourceRoot: "sdk/${{ parameters.ServiceDirectory }}"
   BuildId: $(Build.BuildId)
   REPOROOT: $(Build.SourcesDirectory)
   WINDOWS_OUTPUTROOT: $(REPOROOT)\out
