--- a/eng/common/pipelines/templates/jobs/archetype-sdk-tests-generate.yml
+++ b/eng/common/pipelines/templates/jobs/archetype-sdk-tests-generate.yml
@@ -27,13 +27,10 @@ parameters:
   default: []
 - name: Pool
   type: string
-  default: azsdk-pool-mms-ubuntu-2004-1es-pt
+  default: azsdk-pool-mms-ubuntu-2204-general
 - name: OsVmImage
   type: string
-  default: azsdk-pool-mms-ubuntu-2004-1espt
-- name: OS
-  type: string
-  default: linux
+  default: ubuntu-22.04
 # This parameter is only necessary if there are multiple invocations of this template within the SAME STAGE.
 # When that occurs, provide a name other than the default value.
 - name: GenerateJobName
@@ -42,16 +39,30 @@ parameters:
 - name: PreGenerationSteps
   type: stepList
   default: []
+# Mappings to OS name required at template compile time by 1es pipeline templates
+- name: Pools
+  type: object
+  default:
+    - name: LinuxPool
+      os: linux
+    - name: LinuxNextPool
+      os: linux
+    - name: WindowsPool
+      os: windows
+    - name: MacPool
+      os: macOS
 
 jobs:
 - job: ${{ parameters.GenerateJobName }}
   variables:
-    skipComponentGovernanceDetection: true
-    displayNameFilter: $[ coalesce(variables.jobMatrixFilter, '.*') ]
+    - template: /eng/pipelines/templates/variables/image.yml
+    - name: skipComponentGovernanceDetection
+      value: true
+    - name: displayNameFilter
+      value: $[ coalesce(variables.jobMatrixFilter, '.*') ]
   pool:
     name: ${{ parameters.Pool }}
     vmImage: ${{ parameters.OsVmImage }}
-    os: ${{ parameters.OS }}
   ${{ if parameters.DependsOn }}:
     dependsOn: ${{ parameters.DependsOn }}
   steps:
@@ -69,52 +80,56 @@ jobs:
     - ${{ parameters.PreGenerationSteps }}
 
     - ${{ each config in parameters.MatrixConfigs }}:
-      - ${{ if eq(config.GenerateVMJobs, 'true') }}:
-        - task: Powershell@2
-          inputs:
-            pwsh: true
-            filePath: eng/common/scripts/job-matrix/Create-JobMatrix.ps1
-            arguments: >
-              -ConfigPath ${{ config.Path }}
-              -Selection ${{ config.Selection }}
-              -DisplayNameFilter '$(displayNameFilter)'
-              -Filters '${{ join(''',''', parameters.MatrixFilters) }}','container=^$','SupportedClouds=^$|${{ parameters.CloudConfig.Cloud }}'
-              -Replace '${{ join(''',''', parameters.MatrixReplace) }}'
-              -NonSparseParameters '${{ join(''',''', config.NonSparseParameters) }}'
-          displayName: Generate VM Job Matrix ${{ config.Name }}
-          name: generate_vm_job_matrix_${{ config.Name }}
+      - ${{ each pool in parameters.Pools }}:
+        - ${{ if eq(config.GenerateVMJobs, 'true') }}:
+          - task: Powershell@2
+            inputs:
+              pwsh: true
+              filePath: eng/common/scripts/job-matrix/Create-JobMatrix.ps1
+              arguments: >
+                -ConfigPath ${{ config.Path }}
+                -Selection ${{ config.Selection }}
+                -DisplayNameFilter '$(displayNameFilter)'
+                -Filters '${{ join(''',''', parameters.MatrixFilters) }}', 'container=^$', 'SupportedClouds=^$|${{ parameters.CloudConfig.Cloud }}', 'Pool=.*${{ pool.name }}$'
+                -Replace '${{ join(''',''', parameters.MatrixReplace) }}'
+                -NonSparseParameters '${{ join(''',''', config.NonSparseParameters) }}'
+            displayName: Create ${{ pool.name }} Matrix ${{ config.Name }}
+            name: vm_job_matrix_${{ config.Name }}_${{ pool.name }}
 
-      - ${{ if eq(config.GenerateContainerJobs, 'true') }}:
-        - task: Powershell@2
-          inputs:
-            pwsh: true
-            filePath: eng/common/scripts/job-matrix/Create-JobMatrix.ps1
-            arguments: >
-              -ConfigPath ${{ config.Path }}
-              -Selection ${{ config.Selection }}
-              -DisplayNameFilter '$(displayNameFilter)'
-              -Filters '${{ join(''',''', parameters.MatrixFilters) }}', 'container=.*', 'SupportedClouds=^$|${{ parameters.CloudConfig.Cloud }}'
-              -NonSparseParameters '${{ join(''',''', config.NonSparseParameters) }}'
-          displayName: Generate Container Job Matrix
-          name: generate_container_job_matrix_${{ config.Name }}
+        - ${{ if eq(config.GenerateContainerJobs, 'true') }}:
+          - task: Powershell@2
+            inputs:
+              pwsh: true
+              filePath: eng/common/scripts/job-matrix/Create-JobMatrix.ps1
+              arguments: >
+                -ConfigPath ${{ config.Path }}
+                -Selection ${{ config.Selection }}
+                -DisplayNameFilter '$(displayNameFilter)'
+                -Filters '${{ join(''',''', parameters.MatrixFilters) }}', 'container=^$', 'SupportedClouds=^$|${{ parameters.CloudConfig.Cloud }}', 'Pool=.*${{ pool.name }}$'
+                -NonSparseParameters '${{ join(''',''', config.NonSparseParameters) }}'
+            displayName: Create ${{ pool.name }} Container Matrix ${{ config.Name }}
+            name: container_job_matrix_${{ config.Name }}_${{ pool.name }}
 
 - ${{ each config in parameters.MatrixConfigs }}:
-  - ${{ if eq(config.GenerateVMJobs, 'true') }}:
-    - template: ${{ parameters.JobTemplatePath }}
-      parameters:
-        UsePlatformContainer: false
-        Matrix: dependencies.${{ parameters.GenerateJobName }}.outputs['generate_vm_job_matrix_${{ config.Name }}.matrix']
-        DependsOn: ${{ parameters.GenerateJobName }}
-        CloudConfig: ${{ parameters.CloudConfig }}
-        ${{ each param in parameters.AdditionalParameters }}:
-          ${{ param.key }}: ${{ param.value }}
+  - ${{ each pool in parameters.Pools }}:
+    - ${{ if eq(config.GenerateVMJobs, 'true') }}:
+      - template: ${{ parameters.JobTemplatePath }}
+        parameters:
+          UsePlatformContainer: false
+          OSName: ${{ pool.os }}
+          Matrix: dependencies.${{ parameters.GenerateJobName }}.outputs['vm_job_matrix_${{ config.Name }}_${{ pool.name }}.matrix']
+          DependsOn: ${{ parameters.GenerateJobName }}
+          CloudConfig: ${{ parameters.CloudConfig }}
+          ${{ each param in parameters.AdditionalParameters }}:
+            ${{ param.key }}: ${{ param.value }}
 
-  - ${{ if eq(config.GenerateContainerJobs, 'true') }}:
-    - template: ${{ parameters.JobTemplatePath }}
-      parameters:
-        UsePlatformContainer: true
-        Matrix: dependencies.${{ parameters.GenerateJobName }}.outputs['generate_container_job_matrix_${{ config.Name }}.matrix']
-        DependsOn: ${{ parameters.GenerateJobName }}
-        CloudConfig: ${{ parameters.CloudConfig }}
-        ${{ each param in parameters.AdditionalParameters }}:
-          ${{ param.key }}: ${{ param.value }}
+    - ${{ if eq(config.GenerateContainerJobs, 'true') }}:
+      - template: ${{ parameters.JobTemplatePath }}
+        parameters:
+          UsePlatformContainer: true
+          OSName: ${{ pool.os }}
+          Matrix: dependencies.${{ parameters.GenerateJobName }}.outputs['vm_job_matrix_${{ config.Name }}_${{ pool.name }}.matrix']
+          DependsOn: ${{ parameters.GenerateJobName }}
+          CloudConfig: ${{ parameters.CloudConfig }}
+          ${{ each param in parameters.AdditionalParameters }}:
+            ${{ param.key }}: ${{ param.value }}
